# luna-sysmgr

./: CMakeLists.txt  LunaSysMgr.upstart  desktop.pri  device-known.pri  device.pri  emulator.pri  sysmgr.pro
Src/: Main.cpp
Src/base/: AmbientLightSensor.cpp  AmbientLightSensor.h  BootupAnimation.h  CpuAffinity.cpp  DisplayManager.cpp  DisplayManager.h  DisplayStates.cpp  DisplayStates.h  EASPolicyManager.cpp  EASPolicyManager.h  HapticsController.cpp  HostWindow.cpp  HostWindow.h  KeyboardMapping.h  MemoryMonitor.cpp  MemoryMonitor.h  Security.cpp  Security.h  SuspendBlocker.cpp  SystemService.cpp  SystemService.h  SystemUiController.cpp  SystemUiController.h  Window.cpp  Window.h  WindowServer.cpp  WindowServer.h
Src/base/application/: ApplicationManager.cpp  LaunchPoint.cpp
Src/base/gesture/: FlickGestureRecognizer.cpp  ScreenEdgeFlickGesture.h
Src/base/hosts/: HostArm.cpp  HostArm.h  HostBase.h  HostQtDesktop.cpp
Src/base/settings/: Settings.cpp  Settings.h
Src/base/visual/: CardDropShadowEffect.cpp  ReticleItem.cpp  RoundedCorners.cpp
Src/base/windowdata/: HostWindowData.cpp  HostWindowData.h  HostWindowDataOpenGLHybris.cpp  HostWindowDataOpenGLHybris.h
Src/ime/: IMEController.cpp  IMEManager.cpp  IMEPixmap.cpp  InputWindowManager.cpp  InputWindowManager.h  PhoneKeyboard.cpp  SysmgrIMEDataInterface.cpp  TabletKeyboard.cpp
Src/lunaui/: GraphicsItemContainer.cpp  WebAppFactoryLuna.cpp  WindowServerLuna.cpp
Src/lunaui/cards/: CardGroup.cpp  CardGroup.h  CardLoading.cpp  CardRoundedCornerShaderStage.h  CardWindow.cpp  CardWindowManager.cpp  CardWindowManager.h
Src/lunaui/dock/: DockModeAppMenuContainer.cpp  DockModeClock.cpp  DockModeMenuManager.cpp  DockModeWindow.cpp  DockModeWindowManager.cpp
Src/lunaui/launcher/: OverlayWindowManager.cpp  OverlayWindowManager.h  OverlayWindowManager_p.h  QuicklaunchLayout.cpp  dimensionslauncher.cpp  dimensionslauncher.h  dimensionsmain.cpp  dimensionsmain.h  layoutsettings.cpp  layoutsettings.h
Src/lunaui/lockscreen/: ClockWindow.cpp  LockWindow.cpp  LockWindow.h  TopLevelWindowManager.cpp  TopLevelWindowManager.h
Src/remote/: HybrisCompositor.cpp  HybrisCompositor.h  HybrisCompositorRemoteClientLuna.cpp  HybrisCompositorRemoteClientLuna.h  IpcClientHost.cpp  IpcClientHost.h  IpcServer.cpp  IpcServer.h  WebAppMgrProxy.cpp  WebAppMgrProxy.h  WebosSurfaceManagerRemoteClientLuna.cpp  WebosSurfaceManagerRemoteClientLuna.h
Src/sound/: SoundPlayerPool.h
Src/webbase/: MemoryWatcher.cpp  MemoryWatcher.h  WebAppManager.cpp  WindowedWebApp.cpp
conf/: default-launcher-page-layout.json  defaultPreferences.txt  launcher-conf.schema  luna-a500.conf  luna-desktop.conf  luna-grouper.conf  luna-mako.conf  luna-qemuarm.conf  luna-qemux86.conf  luna-raspberrypi3.conf  luna-tenderloin.conf  luna-tilapia.conf  luna-tuna.conf  luna.conf
conf/launcher3/: launcher_icon_layout_settings-toro.conf  launcher_icon_layout_settings-tuna.conf  launcher_icon_layoutsettings-tilapia.conf  launcher_icon_layoutsettings-tuna.conf
files/sysbus/: com.palm.luna.api.json  com.palm.luna.perm.json  com.palm.luna.role.json.in  com.palm.luna.service.in
service/: com.palm.luna.json.prv  com.palm.luna.json.pub  com.palm.luna.service.prv  com.palm.luna.service.pub
uiComponents/ActionButton/: ActionButton.qml
uiComponents/AppInfoDialog/: AppInfoDialog.qml
uiComponents/DismissCardTutorial/: dismissDialog.qml
uiComponents/DockModeTime/: AnalogClock.qml  Clocks.qml  DigitalClock.qml
uiComponents/MenuContainer/: MenuContainer.qml
uiComponents/MessageDialog/: MessageDialog.qml
uiComponents/SystemMenu/: AirplaneModeElement.qml  BatteryElement.qml  BluetoothElement.qml  BluetoothEntry.qml  BrightnessElement.qml  DateElement.qml  MenuDivider.qml  MenuListEntry.qml  MuteElement.qml  RotationLockElement.qml  Slider.qml  SystemMenu.qml  VpnElement.qml  VpnEntry.qml  WiFiElement.qml  WifiEntry.qml
uiComponents/UnlockPanel/: PINButton.qml  PINPad.qml  PasswordField.qml  UnlockPanel.qml
(+44 files in other folders)
